Viewer3D: Aggreate Control Panel in single frame
While at it, do some code cleanup